--- a/lesson2/task1.html
+++ b/lesson2/task1.html
@@ -6,12 +6,19 @@
 	    <meta charset="utf-8">
 	    <title>Task1</title>
 	   <script src="js/1.js"></script>
+	   <link rel="stylesheet" href="lesson2.css">
 	</head>
 
 	<body>
-	<input value="task1" onclick="year()" type="button"/>
-    <input value="task2" onclick="alert('Спасибо!');" type="button"/>
-    <input value="task3" onclick="alert('Спасибо!');" type="button"/>
+	<section>
+	<input value="task1" onclick="task1()" type="button"/>
+    <input value="task2" onclick="task2()" type="button"/>
+    <input value="task3" onclick="task3()" type="button"/>
+	<input value="task4" onclick="task4()" type="button"/>
+    <input value="task5" onclick="task5()" type="button"/>    	
+	</section>
+    <div><code id="task4"></code></div>
+    <div><code id="task5"></code></div>
 
 	</body>
 </html>
